# MilterAgent

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MilterAgent.conf.sample  README.ja-jp.utf-8.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
etc/: MilterAgent.conf
etc/MilterAgent.d/: filter.conf  filter_bank.conf  filter_creditcard.conf  filter_finance.conf  filter_gov.conf  filter_ittech.conf  filter_online.conf  filter_telecom.conf  filter_transport.conf  filter_utilities.conf  reject2warn.sh  spamhaus.conf
logrotate.d/: miter_agent
src/: client.rs  filter.rs  init.rs  logging.rs  main.rs  milter.rs  parse.rs  spamhaus.rs
systemd/: milter_agent.service  milteragent.service
