
[package]
name = "milter_agent"
version = "0.2.0"
edition = "2024"
authors = ["T.Kabu <kabu@fvg-on.net>"]
description = "A high-performance Rust implementation of a Milter protocol server for MIME email parsing and analysis"
license = "MIT"
keywords = ["milter", "email", "mime", "smtp", "postfix"]
categories = ["email", "network-programming", "parsing"]
readme = "README.md"

[dependencies]
# Tokioランタイム（フル機能を使うためにfullを指定）
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
# 日時・タイムゾーン処理用
chrono = "0.4"
chrono-tz = "0.8"
mail-parser = "0.11"
serde_json = "1.0"
fancy-regex = "0.16"
